--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;    
     border: 16px solid #f3f3f3;
-    border-top: 16px solid #d5c397;
+    border-top: 16px solid #006600;
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -56,4 +56,21 @@ body {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+/* ====================================================== */
+/* Modal Dialogs */
+/* ====================================================== */
+
+.modal {
+    margin: auto;
+    position: absolute;
+    top: 25%; left: 25%; bottom: 25%; right: 25%;    
+    background: #ffffff;
+    box-shadow: 2px 2px 5px 0 #000;
+    border-radius: 12px;
+    border: none;
+    padding: 1em;
+    font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
+    font-size: 11pt;
 }
