Trying to make GET requests work

--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,8 @@ body {
     font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
     font-size: 11pt;
 }
+
+/* ====================================================== */
+/* Playing Table */
+/* ====================================================== */
+
